# sagi

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  protocol.rs
src/client/: mod.rs
src/daemon/: app_manager.rs  gui.rs  icon.rs  mod.rs  unix.rs  wayland.rs
src/daemon/gui/: css.rs  mod.rs
src/daemon/gui/selectable_frame/: imp.rs  mod.rs
