[package]
name = "sagi"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dependencies]
anyhow = "1.0.94"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
freedesktop-icons = "0.2.6"
glib = "0.20.7"
gtk4 = "0.9.5"
gtk4-layer-shell = "0.4.0"
hyprland = "0.4.0-beta.2"
log = { version = "0.4.22", features = ["max_level_debug"] }
serde = "1.0.216"
single-instance = "0.3.3"
tokio = { version = "1.42.0", features = ["net", "rt", "tokio-macros"] }
